# Assignment_1_IOT

./: CMakeLists.txt
src/: Assign_draft.c  assign1.c  draft.c  square.c
